--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,4 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\TestHR.AdminCenter\packages.config" />
+  <repository path="..\TestHR.Data\packages.config" />
+  <repository path="..\TestHR.Entities\packages.config" />
   <repository path="..\TestHR.Web\packages.config" />
 </repositories>
