--- a/TestHR.AdminCenter/TestHR.AdminCenter.csproj
+++ b/TestHR.AdminCenter/TestHR.AdminCenter.csproj
@@ -48,6 +48,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AdminCenterDbContext.cs" />
+    <Compile Include="BranchManagementService.cs" />
+    <Compile Include="BranchRepository.cs" />
+    <Compile Include="BranchUnitOfWork.cs" />
     <Compile Include="CompanyManagementService.cs" />
     <Compile Include="CompanyRepository.cs" />
     <Compile Include="CompanyUnitOfWork.cs" />
