--- a/TestHR.AdminCenter/TestHR.AdminCenter.csproj
+++ b/TestHR.AdminCenter/TestHR.AdminCenter.csproj
@@ -61,6 +61,9 @@
     <Compile Include="EmployeeManagementService.cs" />
     <Compile Include="EmployeeRepository.cs" />
     <Compile Include="EmployeeUnitOfWork.cs" />
+    <Compile Include="HolidayManagementService.cs" />
+    <Compile Include="HolidayRepository.cs" />
+    <Compile Include="HolidayUnitOfWork.cs" />
     <Compile Include="PositionManagementService.cs" />
     <Compile Include="PositionRepository.cs" />
     <Compile Include="PositionUnitOfWork.cs" />
