--- a/TestHR.Entities/TestHR.Entities.csproj
+++ b/TestHR.Entities/TestHR.Entities.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Position.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Shift.cs" />
+    <Compile Include="TimeTable.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TestHR.Data\TestHR.Data.csproj">
