--- a/TestHR.Web/TestHR.Web.csproj
+++ b/TestHR.Web/TestHR.Web.csproj
@@ -1379,6 +1379,8 @@
     <Content Include="Areas\Admin\Views\Company\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\Branch\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\Position\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\Department\Edit.cshtml" />
+    <Content Include="Areas\Admin\Views\Employee\Edit.cshtml" />
     <None Include="bin\TestHR.Web.dll.config" />
     <Content Include="Areas\Admin\Views\_ViewStart.cshtml" />
     <Content Include="Areas\Admin\Views\Shared\_Layout.cshtml" />
