Attendance Log View Table

--- a/TestHR.Web/TestHR.Web.csproj
+++ b/TestHR.Web/TestHR.Web.csproj
@@ -1395,6 +1395,7 @@
     <Content Include="Areas\Admin\Views\Holiday\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\Shift\Edit.cshtml" />
     <Content Include="Areas\Admin\Views\Attendance\AttendanceLogFileImport.cshtml" />
+    <Content Include="Areas\Admin\Views\Attendance\AttendanceLogViewTable.cshtml" />
     <None Include="bin\TestHR.Web.dll.config" />
     <Content Include="Areas\Admin\Views\_ViewStart.cshtml" />
     <Content Include="Areas\Admin\Views\Shared\_Layout.cshtml" />
