--- a/TestHR.Web/TestHR.Web.csproj
+++ b/TestHR.Web/TestHR.Web.csproj
@@ -1401,6 +1401,7 @@
     <Content Include="Areas\Admin\Views\LeaveApplication\LeaveReport.cshtml" />
     <Content Include="Areas\Admin\Views\Attendance\AttendanceLogFileImport.cshtml" />
     <Content Include="Areas\Admin\Views\Attendance\AttendanceLogViewTable.cshtml" />
+    <Content Include="Areas\Admin\Views\Company\CompanyFileImport.cshtml" />
     <None Include="bin\TestHR.Web.dll.config" />
     <Content Include="Areas\Admin\Views\_ViewStart.cshtml" />
     <Content Include="Areas\Admin\Views\Shared\_Layout.cshtml" />
