Attendance module complete

--- a/TestHR.AdminCenter/TestHR.AdminCenter.csproj
+++ b/TestHR.AdminCenter/TestHR.AdminCenter.csproj
@@ -61,6 +61,9 @@
     <Compile Include="AttendanceLogManagementService.cs" />
     <Compile Include="AttendanceLogRepository.cs" />
     <Compile Include="AttendanceLogUnitOfWork.cs" />
+    <Compile Include="AttendanceManagementService.cs" />
+    <Compile Include="AttendanceRepository.cs" />
+    <Compile Include="AttendanceUnitOfWork.cs" />
     <Compile Include="BranchManagementService.cs" />
     <Compile Include="BranchRepository.cs" />
     <Compile Include="BranchUnitOfWork.cs" />
