--- a/TestHR.Web/TestHR.Web.csproj
+++ b/TestHR.Web/TestHR.Web.csproj
@@ -1407,6 +1407,7 @@
     <Content Include="Areas\Admin\Views\Branch\BranchExcelFileImport.cshtml" />
     <Content Include="Areas\Admin\Views\Company\CompanyFileImport.cshtml" />
     <Content Include="Areas\Admin\Views\Department\DepartmentFileImport.cshtml" />
+    <Content Include="Areas\Admin\Views\Attendance\Index.cshtml" />
     <None Include="bin\TestHR.Web.dll.config" />
     <Content Include="Areas\Admin\Views\_ViewStart.cshtml" />
     <Content Include="Areas\Admin\Views\Shared\_Layout.cshtml" />
@@ -1470,7 +1471,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Areas\Admin\Views\Attendance\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
