--- a/TestHR.Entities/TestHR.Entities.csproj
+++ b/TestHR.Entities/TestHR.Entities.csproj
@@ -54,6 +54,8 @@
     <Compile Include="Branch.cs" />
     <Compile Include="Company.cs" />
     <Compile Include="Department.cs" />
+    <Compile Include="Logins.cs" />
+    <Compile Include="Role.cs" />
     <Compile Include="Employee.cs" />
     <Compile Include="EmployeeCareerHistory.cs" />
     <Compile Include="EmployeeEducationHistory.cs" />
