--- a/TestHR.Web/Database.config
+++ b/TestHR.Web/Database.config
@@ -1,4 +1,4 @@
 ﻿<connectionStrings>
 	<clear/>
-	<add name="DefaultConnection" connectionString="Server=.\SQLEXPRESS;Database=TestHR;User Id=TestDbo;Password =123456;" providerName="System.Data.SqlClient"/>
+	<add name="DefaultConnection" connectionString="Server=.\SQLEXPRESS;Database=TestHR;User Id=TestDbo;Password =123456789;" providerName="System.Data.SqlClient"/>
 </connectionStrings>
